--- a/frontend/jobtrackr-fe/src/styles.scss
+++ b/frontend/jobtrackr-fe/src/styles.scss
@@ -49,8 +49,8 @@ body {
   --color-priority-dream: #ffd600;
 
   // Layout
-  --sidebar-width: 240px;
-  --sidebar-collapsed-width: 56px;
+  --sidebar-width: 256px;
+  --sidebar-collapsed-width: 64px;
   --topbar-height: 64px;
 
   // Spacing tokens
